# HDRTray-ColorProfile

./: .gitignore  .gitmodules  CMakeLists.txt  COLOR_PROFILE_SETUP.md  README.md  README_IT.md  copy_profiles_example.bat  setup_files.bat
.github/workflows/: windows-build.yml
HDRTray/: CMakeLists.txt  ColorProfileManager.cpp  ColorProfileManager.hpp  ConfigManager.cpp  ConfigManager.hpp  HDRTray.cpp  HDRTray.rc  NotifyIcon.cpp  NotifyIcon.hpp  Resource.h
release-package/HDRTray/: README.txt
release-package/HDRTray/profiles/: Xiaomi 27i Pro_Rtings.icm  xiaomi_miniled_1d.cal
scripts/: md2html.py
